Fix alignment of Fontawesome icons in navigation

--- a/src/assets/stylesheets/classic/main/components/_nav.scss
+++ b/src/assets/stylesheets/classic/main/components/_nav.scss
@@ -143,6 +143,7 @@
       // as above via `position: relative` - see https://t.ly/5fSj1
       position: relative;
       flex-shrink: 0;
+      width: 1.3em;
       height: 1.3em;
       fill: currentcolor;
 
